--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -4581,7 +4581,127 @@
         </div>
     </div>
 </details>
-                
+<!-- Madde 117 -->
+<details id="madde-117" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+        <span class="mr-3 text-xl">📘</span> Madde 117 – Başkomutanlık ve Genelkurmay Başkanlığı
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+            Başkomutanlık, <strong>Türkiye Büyük Millet Meclisinin manevi varlığından ayrılamaz</strong> ve <strong>Cumhurbaşkanı tarafından temsil olunur.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Milli güvenliğin sağlanmasından ve Silahlı Kuvvetlerin yurt savunmasına hazırlanmasından, <strong>Türkiye Büyük Millet Meclisine karşı, Cumhurbaşkanı sorumludur.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            <strong>Cumhurbaşkanınca atanan Genelkurmay Başkanı;</strong> Silahlı Kuvvetlerin komutanı olup, savaşta <strong>Başkomutanlık görevlerini Cumhurbaşkanlığı namına yerine getirir.</strong>
+        </blockquote>
+        <div class="highlight-box mt-4">
+          <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">💡</span>Anlamlandırma Kutusu: Anayasal Komuta Zinciri</h6>
+          <ol class="list-decimal pl-5 space-y-1 text-sm">
+            <li><strong>Zirvedeki Siyasi Otorite (TBMM):</strong> Başkomutanlık, TBMM'nin manevi varlığına aittir. Bu, ordunun nihai sahibinin millet olduğunu gösterir.</li>
+            <li><strong>Temsil ve Siyasi Sorumluluk (CUMHURBAŞKANI):</strong> Başkomutanlığı temsil eder ve milli güvenlikten TBMM'ye karşı sorumludur.</li>
+            <li><strong>Askeri Komuta ve İcra (GENELKURMAY BAŞKANI):</strong> Cumhurbaşkanınca atanır. Savaşta, Başkomutanlık görevlerini Cumhurbaşkanı adına yerine getirir.</li>
+          </ol>
+        </div>
+    </div>
+</details>
+
+<!-- Madde 118 -->
+<details id="madde-118" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+        <span class="mr-3 text-xl">📘</span> Madde 118 – Milli Güvenlik Kurulu
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+            Millî Güvenlik Kurulu; <strong>Cumhurbaşkanının başkanlığında, Cumhurbaşkanı yardımcıları, Adalet, Millî Savunma, İçişleri, Dışişleri Bakanları, Genelkurmay Başkanı, Kara, Deniz ve Hava kuvvetleri komutanlarından</strong> kurulur.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Gündemin özelliğine göre Kurul toplantılarına ilgili bakan ve kişiler çağrılıp görüşleri alınabilir.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Millî Güvenlik Kurulu; Devletin millî güvenlik siyasetinin tayini, tespiti ve uygulanması ile ilgili alınan <strong>tavsiye kararları</strong> ve gerekli koordinasyonun sağlanması konusundaki görüşlerini <strong>Cumhurbaşkanına bildirir.</strong> (...) alınmasını zorunlu gördüğü tedbirlere ait kararlar <strong>Cumhurbaşkanınca değerlendirilir.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Milli Güvenlik Kurulunun gündemi; Cumhurbaşkanı yardımcıları ve Genelkurmay Başkanının önerileri dikkate alınarak <strong>Cumhurbaşkanınca düzenlenir.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Cumhurbaşkanı katılamadığı zamanlar Milli Güvenlik Kurulu <strong>Cumhurbaşkanı yardımcısının başkanlığında toplanır.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Milli Güvenlik Kurulu Genel Sekreterliğinin teşkilatı ve görevleri <strong>Cumhurbaşkanlığı kararnamesiyle düzenlenir.</strong>
+        </blockquote>
+        <div class="strategy-box mt-4">
+          <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: MGK Masasında Kimler Oturur (ve Oturmaz)?</h6>
+          <p style="text-align: justify;" class="text-sm mb-2">MGK'nın kimlerden oluştuğu, sınavların klasik ezber sorusudur. Üyeleri "sivil" ve "asker" kanat olarak ayırarak daha kolay öğrenebiliriz:</p>
+          <ul class="list-disc pl-5 text-sm">
+            <li><strong>BAŞKAN:</strong> CUMHURBAŞKANI</li>
+            <li><strong>SİVİL KANAT:</strong> Cumhurbaşkanı Yardımcıları, Adalet, Millî Savunma, İçişleri ve Dışişleri Bakanları</li>
+            <li><strong>ASKERİ KANAT:</strong> Genelkurmay Başkanı, Kara, Deniz ve Hava Kuvvetleri Komutanları</li>
+          </ul>
+           <p style="text-align: justify;" class="text-sm mt-2 text-red-700"><strong>⚠️ Üye Olmayanlar:</strong> Jandarma Genel Komutanı, MİT Başkanı, Sahil Güvenlik Komutanı MGK'nın daimi üyesi değildir.</p>
+        </div>
+    </div>
+</details>
+                <!-- Madde 119 -->
+<details id="madde-119" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+        <span class="mr-3 text-xl">📘</span> Madde 119 – Olağanüstü Hal Yönetimi
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+            <strong>Cumhurbaşkanı;</strong> savaş, savaşı gerektirecek bir durumun başgöstermesi, seferberlik, ayaklanma, vatan veya Cumhuriyete karşı kuvvetli ve eylemli bir kalkışma, ülkenin ve milletin bölünmezliğini içten veya dıştan tehlikeye düşüren şiddet hareketlerinin yaygınlaşması, anayasal düzeni veya temel hak ve hürriyetleri ortadan kaldırmaya yönelik yaygın şiddet hareketlerinin ortaya çıkması, şiddet olayları nedeniyle kamu düzeninin ciddî şekilde bozulması, tabiî afet veya tehlikeli salgın hastalık ya da ağır ekonomik bunalımın ortaya çıkması hallerinde yurdun tamamında veya bir bölgesinde, <strong>süresi altı ayı geçmemek üzere olağanüstü hal ilan edebilir.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Olağanüstü hal ilanı kararı, verildiği gün Resmî Gazetede yayımlanır ve <strong>aynı gün Türkiye Büyük Millet Meclisinin onayına sunulur.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Türkiye Büyük Millet Meclisi tatilde ise derhal toplantıya çağırılır; <strong>Meclis gerekli gördüğü takdirde olağanüstü halin süresini kısaltabilir, uzatabilir veya olağanüstü hali kaldırabilir.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Cumhurbaşkanının talebiyle Türkiye Büyük Millet Meclisi her defasında <strong>dört ayı geçmemek üzere süreyi uzatabilir. Savaş hallerinde bu dört aylık süre aranmaz.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Olağanüstü hallerde vatandaşlar için getirilecek para, mal ve çalışma yükümlülükleri ile 15 inci maddedeki ilkeler doğrultusunda temel hak ve hürriyetlerin nasıl sınırlanacağı veya geçici olarak durdurulacağı, hangi hükümlerin uygulanacağı ve işlemlerin nasıl yürütüleceği kanunla düzenlenir.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Olağanüstü hallerde Cumhurbaşkanı, olağanüstü halin gerekli kıldığı konularda, 104 üncü maddenin onyedinci fıkrasının ikinci cümlesinde belirtilen sınırlamalara tabi olmaksızın <strong>Cumhurbaşkanlığı kararnamesi çıkarabilir.</strong> Kanun hükmündeki bu kararnameler Resmî Gazetede yayımlanır, <strong>aynı gün Meclis onayına sunulur.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Savaş ve mücbir sebeplerle Türkiye Büyük Millet Meclisinin toplanamaması hâli hariç olmak üzere; olağanüstü hal sırasında çıkarılan Cumhurbaşkanlığı kararnameleri <strong>üç ay içinde Türkiye Büyük Millet Meclisinde görüşülür ve karara bağlanır. Aksi halde</strong> olağanüstü hallerde çıkarılan Cumhurbaşkanlığı kararnamesi <strong>kendiliğinden yürürlükten kalkar.</strong>
+        </blockquote>
+        <div class="highlight-box mt-4">
+          <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">💡</span>Anlamlandırma Kutusu: OHAL'in Kimlik Kartı</h6>
+            <div class="overflow-x-auto">
+                <table class="w-full text-sm border-collapse">
+                    <thead><tr class="bg-slate-100"><th class="border border-slate-300 p-2">Süreç Adımı</th><th class="border border-slate-300 p-2">Yetkili Makam</th><th class="border border-slate-300 p-2">Süre</th></tr></thead>
+                    <tbody class="bg-white">
+                        <tr><td class="border border-slate-300 p-2 font-medium">İLK İLAN</td><td class="border border-slate-300 p-2">Cumhurbaşkanı</td><td class="border border-slate-300 p-2">En çok <strong>6 AY</strong></td></tr>
+                        <tr class="bg-slate-50"><td class="border border-slate-300 p-2 font-medium">ONAY / DEĞİŞTİRME</td><td class="border border-slate-300 p-2">TBMM (Aynı gün sunulur)</td><td class="border border-slate-300 p-2">Süreyi kısaltabilir, uzatabilir, kaldırabilir.</td></tr>
+                        <tr><td class="border border-slate-300 p-2 font-medium">UZATMA</td><td class="border border-slate-300 p-2">TBMM (CB talebiyle)</td><td class="border border-slate-300 p-2">Her defasında en çok <strong>4 AY</strong></td></tr>
+                        <tr class="bg-slate-50"><td class="border border-slate-300 p-2 font-medium">SAVAŞ HALİNDE UZATMA</td><td class="border border-slate-300 p-2">TBMM</td><td class="border border-slate-300 p-2">Süre sınırı aranmaz.</td></tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <div class="strategy-box mt-4">
+          <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">📊</span>Karşılaştırmalı Analiz: Normal CBK vs. OHAL CBK'sı</h6>
+          <p style="text-align: justify;" class="text-sm mb-3">Sınavda, normal CBK ile OHAL CBK'sı arasındaki farklar kesinlikle sorulur.</p>
+           <div class="overflow-x-auto">
+            <table class="w-full text-sm border-collapse">
+                 <thead><tr class="bg-red-100"><th class="border border-red-300 p-2">Özellik</th><th class="border border-red-300 p-2">NORMAL CBK (Md. 104)</th><th class="border border-red-300 p-2">OHAL CBK'sı (Md. 119)</th></tr></thead>
+                 <tbody class="bg-white">
+                    <tr><td class="border border-red-300 p-2 font-medium">Konu Sınırlaması</td><td class="border border-red-300 p-2"><strong>VAR.</strong> "Yasak alanlara" (Kişi ve Siyasi Haklar) giremez.</td><td class="border border-red-300 p-2"><strong>YOKTUR.</strong> OHAL'in gerekli kıldığı her konuda çıkarılabilir.</td></tr>
+                    <tr class="bg-red-50"><td class="border border-red-300 p-2 font-medium">Kanunla Çatışma</td><td class="border border-red-300 p-2">Kanunla çatışamaz, kanun üstündür.</td><td class="border border-red-300 p-2">Kanun hükmündedir, kanunlardan farklı olabilir.</td></tr>
+                    <tr><td class="border border-red-300 p-2 font-medium">Yargısal Denetim</td><td class="border border-red-300 p-2">Anayasa Mahkemesi denetler.</td><td class="border border-red-300 p-2">Anayasaya göre yargısal denetimi <strong>YOKTUR</strong>.</td></tr>
+                    <tr class="bg-red-50"><td class="border border-red-300 p-2 font-medium">TBMM Onayı</td><td class="border border-red-300 p-2">Gerekmez.</td><td class="border border-red-300 p-2"><strong>ZORUNLUDUR.</strong> Çıkarıldığı gün Meclis'e sunulur.</td></tr>
+                    <tr><td class="border border-red-300 p-2 font-medium">Meclis'teki Akıbeti</td><td class="border border-red-300 p-2">Meclis aynı konuda kanun çıkarırsa hükümsüz kalır.</td><td class="border border-red-300 p-2">Meclis <strong>3 ay içinde</strong> görüşmezse <strong>kendiliğinden yürürlükten kalkar.</strong></td></tr>
+                </tbody>
+            </table>
+          </div>
+        </div>
+    </div>
+</details>
                 
 </section>
  
