--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -4702,6 +4702,106 @@
         </div>
     </div>
 </details>
+                <!-- Madde 120-122 -->
+<details id="madde-120-122" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800 bg-slate-100 text-slate-500">
+        <span class="mr-3 text-xl">📘</span> Madde 120, 121, 122 – Eski OHAL ve Sıkıyönetim Maddeleri (Mülga)
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+            (Mülga: 21/1/2017-6771/16 md.)
+        </blockquote>
+        <div class="highlight-box mt-4">
+            <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">💡</span>Anlamlandırma Kutusu:</h6>
+            <p style="text-align: justify;" class="text-sm">Bu maddeler, 2017 Anayasa değişikliği ile yürürlükten kaldırılmıştır. Çünkü eski sistemde "Olağanüstü Hal" ve "Sıkıyönetim" gibi farklı istisnai rejimler vardı. 2017 değişikliği ile tüm bu rejimler, Madde 119 altında "Olağanüstü Hal (OHAL)" başlığıyla tek bir yapıda toplanmıştır. <strong>"Sıkıyönetim" ise bir yönetim usulü olarak Anayasa'dan tamamen çıkarılmıştır.</strong></p>
+        </div>
+    </div>
+</details>
+
+<!-- IV. İdare -->
+<div class="mt-8 mb-4">
+     <h4 class="text-2xl font-bold text-slate-700">IV. İdare</h4>
+     <p class="text-slate-600 mt-2" style="text-align: justify;">"İdare", en basit tanımıyla, devletin yürütme organının, kanunlar çerçevesinde kamu hizmetlerini yerine getirmek için kurduğu devasa örgüt ve bu örgütün faaliyetleridir. Bu bölümde, idarenin temel ilkelerini ve bu ilkelerin en önemli güvencesi olan "yargı denetimini" inceleyeceğiz.</p>
+</div>
+
+<!-- Madde 123 -->
+<details id="madde-123" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+        <span class="mr-3 text-xl">📘</span> Madde 123 – İdarenin Bütünlüğü ve Kamu Tüzelkişiliği
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+            İdare, kuruluş ve görevleriyle bir <strong>bütündür</strong> ve kanunla düzenlenir.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            İdarenin kuruluş ve görevleri, <strong>merkezden yönetim ve yerinden yönetim esaslarına dayanır.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Kamu tüzelkişiliği, <strong>kanunla veya Cumhurbaşkanlığı kararnamesiyle kurulur.</strong>
+        </blockquote>
+        <div class="strategy-box mt-4">
+          <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi:</h6>
+          <p style="text-align: justify;" class="text-sm">2017 öncesinde kamu tüzelkişiliği sadece kanunla kurulabilirdi. Artık <strong>Cumhurbaşkanlığı Kararnamesiyle de kurulabilmesi,</strong> sınavlar için çok önemli bir yeniliktir ve doğrudan sorulma potansiyeli yüksektir.</p>
+        </div>
+    </div>
+</details>
+
+<!-- Madde 124 -->
+<details id="madde-124" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+        <span class="mr-3 text-xl">📘</span> Madde 124 – Yönetmelikler
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+            <strong>Cumhurbaşkanı, bakanlıklar ve kamu tüzelkişileri,</strong> kendi görev alanlarını ilgilendiren kanunların ve Cumhurbaşkanlığı kararnamelerinin uygulanmasını sağlamak üzere ve <strong>bunlara aykırı olmamak şartıyla, yönetmelikler çıkarabilirler.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Hangi yönetmeliklerin Resmî Gazetede yayımlanacağı kanunda belirtilir.
+        </blockquote>
+    </div>
+</details>
+
+<!-- Madde 125 -->
+<details id="madde-125" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+        <span class="mr-3 text-xl">📘</span> Madde 125 – Yargı Yolu
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+            <strong>İdarenin her türlü eylem ve işlemlerine karşı yargı yolu açıktır.</strong> (...)
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            (...) Yüksek Askerî Şûranın <strong>terfi işlemleri ile kadrosuzluk nedeniyle emekliye ayırma hariç her türlü ilişik kesme kararlarına karşı yargı yolu açıktır.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            İdari işlemlere karşı açılacak davalarda süre, yazılı bildirim tarihinden başlar.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Yargı yetkisi, idarî eylem ve işlemlerin hukuka uygunluğunun denetimi ile sınırlı olup, <strong>hiçbir surette yerindelik denetimi şeklinde kullanılamaz.</strong> (...)
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            İdari işlemin uygulanması halinde <strong>telafisi güç veya imkansız zararların doğması ve idari işlemin açıkça hukuka aykırı olması şartlarının birlikte gerçekleşmesi</strong> durumunda gerekçe gösterilerek yürütmenin durdurulmasına karar verilebilir.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Kanun, olağanüstü hallerde, (...) seferberlik ve savaş halinde ayrıca milli güvenlik, kamu düzeni, genel sağlık nedenleri ile yürütmenin durdurulması kararı verilmesini sınırlayabilir.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            <strong>İdare, kendi eylem ve işlemlerinden doğan zararı ödemekle yükümlüdür.</strong>
+        </blockquote>
+         <div class="strategy-box mt-4">
+          <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: Yargı Denetimi Dışında Olan İşlemler</h6>
+          <p style="text-align: justify;" class="text-sm">"Altın Kural" idarenin her işleminin yargıya açık olmasıdır. Ancak Anayasa'nın kendisi bazı istisnalar getirir. Sınavlarda en çok bu istisnalar sorulur:</p>
+          <ul class="list-disc pl-5 text-sm space-y-1">
+            <li>Yüksek Askerî Şûra (YAŞ)'nın <strong>terfi ve kadrosuzluktan emekliye ayırma</strong> kararları.</li>
+            <li>HSK'nın <strong>meslekten çıkarma dışındaki</strong> kararları (Md. 159).</li>
+            <li>YSK kararları (Md. 79).</li>
+            <li>Tahkim Kurulu kararları (Md. 59).</li>
+            <li>Milletlerarası andlaşmalar (Md. 90).</li>
+          </ul>
+        </div>
+    </div>
+</details>
+                
                 
 </section>
  
