--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -4801,7 +4801,173 @@
         </div>
     </div>
 </details>
-                
+         <!-- C. İdarenin kuruluşu -->
+<div class="mt-8 mb-4">
+     <h4 class="text-2xl font-bold text-slate-700">C. İdarenin Kuruluşu</h4>
+</div>
+
+<!-- Madde 126 -->
+<details id="madde-126" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+        <span class="mr-3 text-xl">📘</span> Madde 126 – Merkezi İdare
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+            Türkiye, merkezi idare kuruluşu bakımından, coğrafya durumuna, ekonomik şartlara ve kamu hizmetlerinin gereklerine göre, illere; iller de diğer kademeli bölümlere ayırılır.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            <strong>İllerin idaresi yetki genişliği esasına dayanır.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Kamu hizmetlerinin görülmesinde verim ve uyum sağlamak amacıyla, birden çok ili içine alan merkezi idare teşkilatı kurulabilir. Bu teşkilatın görev ve yetkileri kanunla düzenlenir.
+        </blockquote>
+        <div class="highlight-box mt-4">
+          <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">💡</span>Anlamlandırma Kutusu: "Yetki Genişliği" İlkesi Nedir?</h6>
+          <p style="text-align: justify;" class="text-sm">Bu, maddenin ve sınavların en kritik kavramıdır. Sadece <strong>İLLERDE</strong> ve sadece <strong>VALİYE</strong> tanınmış bir istisnadır. Vali, ilin genel idaresi için gerekli gördüğü acil durumlarda, merkeze (Ankara'ya) danışmadan, merkeze ait bir yetkiyi kullanabilir. Bu yetki, hiyerarşiyi ortadan kaldırmaz, sadece esnetir.</p>
+        </div>
+    </div>
+</details>
+
+<!-- Madde 127 -->
+<details id="madde-127" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+        <span class="mr-3 text-xl">📘</span> Madde 127 – Mahalli İdareler
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+            Mahalli idareler; il, belediye veya köy halkının mahalli müşterek ihtiyaçlarını karşılamak üzere kuruluş esasları kanunla belirtilen ve karar organları, gene kanunda gösterilen, <strong>seçmenler tarafından seçilerek oluşturulan kamu tüzelkişileridir.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Mahalli idarelerin kuruluş ve görevleri ile yetkileri, yerinden yönetim ilkesine uygun olarak kanunla düzenlenir.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Mahalli idarelerin seçimleri, 67 nci maddedeki esaslara göre beş yılda bir yapılır. (...) Kanun, büyük yerleşim merkezleri için özel yönetim biçimleri getirebilir.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Mahalli idarelerin seçilmiş organlarının, organlık sıfatını kazanmalarına ilişkin itirazların çözümü ve kaybetmeleri, konusundaki denetim yargı yolu ile olur. Ancak, görevleri ile ilgili bir suç sebebi ile hakkında soruşturma veya kovuşturma açılan mahalli idare organları veya bu organların üyelerini, <strong>İçişleri Bakanı, geçici bir tedbir olarak, kesin hükme kadar uzaklaştırabilir.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Merkezi idare, mahalli idareler üzerinde, mahalli hizmetlerin idarenin bütünlüğü ilkesine uygun şekilde yürütülmesi, kamu görevlerinde birliğin sağlanması, toplum yararının korunması ve mahalli ihtiyaçların gereği gibi karşılanması amacıyla, kanunda belirtilen esas ve usuller dairesinde <strong>idari vesayet yetkisine sahiptir.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Mahalli idarelerin belirli kamu hizmetlerinin görülmesi amacı ile, kendi aralarında <strong>Cumhurbaşkanının izni ile birlik kurmaları</strong>, görevleri, yetkileri, maliye ve kolluk işleri ve merkezi idare ile karşılıklı bağ ve ilgileri kanunla düzenlenir. Bu idarelere, görevleri ile orantılı gelir kaynakları sağlanır.
+        </blockquote>
+        <div class="strategy-box mt-4">
+          <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">📊</span>Karşılaştırmalı Analiz: Hiyerarşi ile İdari Vesayet Farkı (Kesin Soru!)</h6>
+          <div class="overflow-x-auto">
+            <table class="w-full text-sm border-collapse">
+                 <thead><tr class="bg-slate-100"><th class="border border-slate-300 p-2">Kriter</th><th class="border border-slate-300 p-2">HİYERARŞİ</th><th class="border border-slate-300 p-2">İDARİ VESAYET</th></tr></thead>
+                 <tbody class="bg-white">
+                    <tr><td class="border border-slate-300 p-2 font-medium">Kimler Arasında?</td><td class="border border-slate-300 p-2">Tek bir tüzel kişilik içinde (ast-üst). Örn: Bakan ↔️ Vali</td><td class="border border-slate-300 p-2">İki ayrı kamu tüzel kişiliği arasında. Örn: Merkezi İdare ↔️ Belediye</td></tr>
+                    <tr class="bg-slate-50"><td class="border border-slate-300 p-2 font-medium">Yetkinin Kapsamı</td><td class="border border-slate-300 p-2">Hem Hukukilik hem Yerindelik denetimi. Emir ve talimat içerir.</td><td class="border border-slate-300 p-2">Sadece Hukukilik denetimi. Emir verilemez.</td></tr>
+                </tbody>
+            </table>
+          </div>
+        </div>
+    </div>
+</details>
+
+<!-- Madde 128 -->
+<details id="madde-128" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+        <span class="mr-3 text-xl">📘</span> Madde 128 – Kamu Hizmeti Görevlileri
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+            Devletin, kamu iktisadi teşebbüsleri ve diğer kamu tüzelkişilerinin genel idare esaslarına göre yürütmekle yükümlü oldukları kamu hizmetlerinin gerektirdiği <strong>asli ve sürekli görevler, memurlar ve diğer kamu görevlileri eliyle görülür.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Memurların ve diğer kamu görevlilerinin nitelikleri, atanmaları, görev ve yetkileri, hakları ve yükümlülükleri, aylık ve ödenekleri ve diğer özlük işleri <strong>kanunla düzenlenir.</strong> (...) <strong>Ancak, malî ve sosyal haklara ilişkin toplu sözleşme hükümleri saklıdır.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Üst kademe yöneticilerinin yetiştirilme usul ve esasları, kanunla özel olarak düzenlenir.
+        </blockquote>
+        <div class="highlight-box mt-4">
+            <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Uzman Eğitmen Analizi:</h6>
+            <p style="text-align: justify;" class="text-sm">Bu madde, memurların anayasal statüsünü belirler. En temel ilke, devletin "asli ve sürekli görevler"inin memurlar eliyle yürütülmesidir. En önemli güvence ise, memurların tüm özlük işlerinin keyfi idari işlemlerle değil, <strong>kanunla</strong> düzenlenmesi zorunluluğudur.</p>
+        </div>
+    </div>
+</details>
+                <!-- Madde 129 -->
+<details id="madde-129" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+        <span class="mr-3 text-xl">📘</span> Madde 129 – Görev ve Sorumluluklar, Disiplin Güvencesi
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+            Memurlar ve diğer kamu görevlileri Anayasa ve kanunlara sadık kalarak faaliyette bulunmakla yükümlüdürler.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Memurlar ve diğer kamu görevlileri ile kamu kurumu niteliğindeki meslek kuruluşları ve bunların üst kuruluşları mensuplarına <strong>savunma hakkı tanınmadıkça disiplin cezası verilemez.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            <strong>Disiplin kararları yargı denetimi dışında bırakılamaz.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Silahlı Kuvvetler mensupları ile hakimler ve savcılar hakkındaki hükümler saklıdır.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Memurlar ve diğer kamu görevlilerinin yetkilerini kullanırken işledikleri kusurlardan doğan tazminat davaları, kendilerine rücu edilmek kaydıyla ve kanunun gösterdiği şekil ve şartlara uygun olarak, <strong>ancak idare aleyhine açılabilir.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Memurlar ve diğer kamu görevlileri hakkında işledikleri iddia edilen suçlardan ötürü ceza kovuşturması açılması, kanunla belirlenen istisnalar dışında, <strong>kanunun gösterdiği idari merciin iznine bağlıdır.</strong>
+        </blockquote>
+        <div class="strategy-box mt-4">
+          <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: İki Dava Türünü Ayırt Etme</h6>
+          <p style="text-align: justify;" class="text-sm mb-3">Sınavda, memura karşı açılacak dava türleri ve usulleri sıkça karıştırılır. Bu ayrımı netleştirin:</p>
+            <div class="overflow-x-auto">
+                <table class="w-full text-sm border-collapse">
+                    <thead><tr class="bg-slate-100"><th class="border border-slate-300 p-2">Dava Türü</th><th class="border border-slate-300 p-2">Sebep</th><th class="border border-slate-300 p-2">Kime Karşı Açılır / Usul Nedir?</th></tr></thead>
+                    <tbody class="bg-white">
+                        <tr><td class="border border-slate-300 p-2 font-medium">Tazminat Davası</td><td class="border border-slate-300 p-2">Memurun kusuruyla vatandaşa zarar vermesi</td><td class="border border-slate-300 p-2">Doğrudan <strong>İDARE'ye</strong> açılır.</td></tr>
+                        <tr class="bg-slate-50"><td class="border border-slate-300 p-2 font-medium">Ceza Davası</td><td class="border border-slate-300 p-2">Memurun göreviyle ilgili suç işlemesi</td><td class="border border-slate-300 p-2">Önce <strong>İDARİ MERCİDEN İZİN</strong> alınır.</td></tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</details>
+
+<!-- Madde 130 -->
+<details id="madde-130" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+        <span class="mr-3 text-xl">📘</span> Madde 130 – Yükseköğretim Kurumları
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+            (...) <strong>kamu tüzelkişiliğine ve bilimsel özerkliğe sahip üniversiteler Devlet tarafından kanunla kurulur.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Kanunda gösterilen usul ve esaslara göre, kazanç amacına yönelik olmamak şartı ile <strong>vakıflar tarafından</strong>, Devletin gözetim ve denetimine tabi <strong>yükseköğretim kurumları kurulabilir.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            (...) Üniversiteler ile öğretim üyeleri ve yardımcıları serbestçe her türlü bilimsel araştırma ve yayında bulunabilirler. Ancak, bu yetki, Devletin varlığı ve bağımsızlığı ve milletin ve ülkenin bütünlüğü ve bölünmezliği aleyhinde faaliyette bulunma serbestliği vermez.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Üniversiteler ve bunlara bağlı birimler, Devletin gözetimi ve denetimi altında olup, güvenlik hizmetleri Devletçe sağlanır.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Kanunun belirlediği usul ve esaslara göre; <strong>rektörler Cumhurbaşkanınca, dekanlar ise Yükseköğretim Kurulunca seçilir ve atanır.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Üniversite yönetim ve denetim organları ile öğretim elemanları; Yükseköğretim Kurulunun veya üniversitelerin yetkili organlarının dışında kalan makamlarca her ne suretle olursa olsun <strong>görevlerinden uzaklaştırılamazlar.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            (...)
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Vakıflar tarafından kurulan yükseköğretim kurumları, mali ve idari konuları dışındaki akademik çalışmaları, öğretim elemanlarının sağlanması ve güvenlik yönlerinden, Devlet eliyle kurulan yükseköğretim kurumları için Anayasada belirtilen hükümlere tabidir.
+        </blockquote>
+        <div class="strategy-box mt-4">
+          <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: Rektörü Kim Atar, Dekanı Kim Atar?</h6>
+          <p style="text-align: justify;" class="text-sm">Üniversite yönetimindeki atama usulleri, Anayasa'da net bir şekilde ayrılmıştır ve sınavların favori konusudur:</p>
+            <ul class="list-disc pl-5 text-sm space-y-1">
+                <li><strong>REKTÖRLER ➡️ CUMHURBAŞKANINCA</strong> seçilir ve atanır.</li>
+                <li><strong>DEKANLAR ➡️ YÜKSEKÖĞRETİM KURULUNCA (YÖK)</strong> seçilir ve atanır.</li>
+            </ul>
+        </div>
+    </div>
+</details>
                 
 </section>
  
