--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -4835,7 +4835,7 @@
             Mahalli idarelerin kuruluş ve görevleri ile yetkileri, yerinden yönetim ilkesine uygun olarak kanunla düzenlenir.
         </blockquote>
         <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
-            Mahalli idarelerin seçimleri, 67 nci maddedeki esaslara göre beş yılda bir yapılır. (...) Kanun, büyük yerleşim merkezleri için özel yönetim biçimleri getirebilir.
+            Mahalli idarelerin seçimleri, 67 nci maddedeki esaslara göre beş yılda bir yapılır. Kanun, büyük yerleşim merkezleri için özel yönetim biçimleri getirebilir.
         </blockquote>
         <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
             Mahalli idarelerin seçilmiş organlarının, organlık sıfatını kazanmalarına ilişkin itirazların çözümü ve kaybetmeleri, konusundaki denetim yargı yolu ile olur. Ancak, görevleri ile ilgili bir suç sebebi ile hakkında soruşturma veya kovuşturma açılan mahalli idare organları veya bu organların üyelerini, <strong>İçişleri Bakanı, geçici bir tedbir olarak, kesin hükme kadar uzaklaştırabilir.</strong>
@@ -4871,7 +4871,7 @@
             Devletin, kamu iktisadi teşebbüsleri ve diğer kamu tüzelkişilerinin genel idare esaslarına göre yürütmekle yükümlü oldukları kamu hizmetlerinin gerektirdiği <strong>asli ve sürekli görevler, memurlar ve diğer kamu görevlileri eliyle görülür.</strong>
         </blockquote>
         <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
-            Memurların ve diğer kamu görevlilerinin nitelikleri, atanmaları, görev ve yetkileri, hakları ve yükümlülükleri, aylık ve ödenekleri ve diğer özlük işleri <strong>kanunla düzenlenir.</strong> (...) <strong>Ancak, malî ve sosyal haklara ilişkin toplu sözleşme hükümleri saklıdır.</strong>
+            Memurların ve diğer kamu görevlilerinin nitelikleri, atanmaları, görev ve yetkileri, hakları ve yükümlülükleri, aylık ve ödenekleri ve diğer özlük işleri <strong>kanunla düzenlenir.</strong> <strong>Ancak, malî ve sosyal haklara ilişkin toplu sözleşme hükümleri saklıdır.</strong>
         </blockquote>
         <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
             Üst kademe yöneticilerinin yetiştirilme usul ve esasları, kanunla özel olarak düzenlenir.
@@ -4882,7 +4882,7 @@
         </div>
     </div>
 </details>
-                <!-- Madde 129 -->
+               <!-- Madde 129 -->
 <details id="madde-129" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
     <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
         <span class="mr-3 text-xl">📘</span> Madde 129 – Görev ve Sorumluluklar, Disiplin Güvencesi
@@ -4929,13 +4929,16 @@
     </summary>
     <div class="px-4 pb-4 mt-2 border-t pt-4">
         <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
-            (...) <strong>kamu tüzelkişiliğine ve bilimsel özerkliğe sahip üniversiteler Devlet tarafından kanunla kurulur.</strong>
+            Çağdaş eğitim-öğretim esaslarına dayanan bir düzen içinde milletin ve ülkenin ihtiyaçlarına uygun insan gücü yetiştirmek amacı ile; ortaöğretime dayalı çeşitli düzeylerde eğitim-öğretim, bilimsel araştırma, yayın ve danışmanlık yapmak, ülkeye ve insanlığa hizmet etmek üzere çeşitli birimlerden oluşan <strong>kamu tüzelkişiliğine ve bilimsel özerkliğe sahip üniversiteler Devlet tarafından kanunla kurulur.</strong>
         </blockquote>
         <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
             Kanunda gösterilen usul ve esaslara göre, kazanç amacına yönelik olmamak şartı ile <strong>vakıflar tarafından</strong>, Devletin gözetim ve denetimine tabi <strong>yükseköğretim kurumları kurulabilir.</strong>
         </blockquote>
         <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
-            (...) Üniversiteler ile öğretim üyeleri ve yardımcıları serbestçe her türlü bilimsel araştırma ve yayında bulunabilirler. Ancak, bu yetki, Devletin varlığı ve bağımsızlığı ve milletin ve ülkenin bütünlüğü ve bölünmezliği aleyhinde faaliyette bulunma serbestliği vermez.
+            Kanun, üniversitelerin ülke sathına dengeli bir biçimde yayılmasını gözetir.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Üniversiteler ile öğretim üyeleri ve yardımcıları serbestçe her türlü bilimsel araştırma ve yayında bulunabilirler. Ancak, bu yetki, Devletin varlığı ve bağımsızlığı ve milletin ve ülkenin bütünlüğü ve bölünmezliği aleyhinde faaliyette bulunma serbestliği vermez.
         </blockquote>
         <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
             Üniversiteler ve bunlara bağlı birimler, Devletin gözetimi ve denetimi altında olup, güvenlik hizmetleri Devletçe sağlanır.
@@ -4947,7 +4950,10 @@
             Üniversite yönetim ve denetim organları ile öğretim elemanları; Yükseköğretim Kurulunun veya üniversitelerin yetkili organlarının dışında kalan makamlarca her ne suretle olursa olsun <strong>görevlerinden uzaklaştırılamazlar.</strong>
         </blockquote>
         <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
-            (...)
+            Üniversitelerin hazırladığı bütçeler; Yükseköğretim Kurulunca tetkik ve onaylandıktan sonra Milli Eğitim Bakanlığına sunulur ve merkezi yönetim bütçesinin bağlı olduğu esaslara uygun olarak işleme tabi tutularak yürürlüğe konulur ve denetlenir.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Yükseköğretim kurumlarının kuruluş ve organları ile işleyişleri ve bunların seçimleri, görev, yetki ve sorumlulukları üniversiteler üzerinde Devletin gözetim ve denetim hakkını kullanma usulleri, öğretim elemanlarının görevleri, unvanları, atama, yükselme ve emeklilikleri, öğretim elemanı yetiştirme, üniversitelerin ve öğretim elemanlarının kamu kuruluşları ve diğer kurumlar ile ilişkileri, öğretim düzeyleri ve süreleri, yükseköğretime giriş, devam ve alınacak harçlar, Devletin yapacağı yardımlar ile ilgili ilkeler, disiplin ve ceza işleri, mali işler, özlük hakları, öğretim elemanlarının uyacakları koşullar, üniversitelerarası ihtiyaçlara göre öğretim elemanlarının görevlendirilmesi, öğrenimin ve öğretimin hürriyet ve teminat içinde ve çağdaş bilim ve teknoloji gereklerine göre yürütülmesi, Yükseköğretim kuruluna ve üniversitelere Devletin sağladığı mali kaynakların kullanılması kanunla düzenlenir.
         </blockquote>
         <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
             Vakıflar tarafından kurulan yükseköğretim kurumları, mali ve idari konuları dışındaki akademik çalışmaları, öğretim elemanlarının sağlanması ve güvenlik yönlerinden, Devlet eliyle kurulan yükseköğretim kurumları için Anayasada belirtilen hükümlere tabidir.
