--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -4882,10 +4882,10 @@
         </div>
     </div>
 </details>
-               <!-- Madde 129 -->
+     <!-- Madde 129 -->
 <details id="madde-129" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
     <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
-        <span class="mr-3 text-xl">📘</span> Madde 129 – Görev ve Sorumluluklar, Disiplin Güvencesi
+        <span class="mr-3 text-xl">📘</span> Madde 129 – Görev ve Sorumlulukları, Disiplin Güvencesi
     </summary>
     <div class="px-4 pb-4 mt-2 border-t pt-4">
         <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
