--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -4882,10 +4882,10 @@
         </div>
     </div>
 </details>
-     <!-- Madde 129 -->
+ <!-- Madde 129 -->
 <details id="madde-129" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
     <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
-        <span class="mr-3 text-xl">📘</span> Madde 129 – Görev ve Sorumlulukları, Disiplin Güvencesi
+        <span class="mr-3 text-xl">📘</span> Madde 129 – Görev ve Sorumluluklar, Disiplin Güvencesi
     </summary>
     <div class="px-4 pb-4 mt-2 border-t pt-4">
         <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
@@ -4906,15 +4906,23 @@
         <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
             Memurlar ve diğer kamu görevlileri hakkında işledikleri iddia edilen suçlardan ötürü ceza kovuşturması açılması, kanunla belirlenen istisnalar dışında, <strong>kanunun gösterdiği idari merciin iznine bağlıdır.</strong>
         </blockquote>
+        <div class="highlight-box mt-4">
+          <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">💡</span>Anlamlandırma Kutusu: Memurun 4 Temel Güvencesi</h6>
+          <ol class="list-decimal pl-5 space-y-1 text-sm">
+            <li><strong>Savunma Hakkı Olmadan Ceza Olmaz:</strong> Memura savunma hakkı tanınmadan disiplin cezası verilemez.</li>
+            <li><strong>Disiplin Cezalarına Karşı Yargı Yolu Açıktır:</strong> Verilen tüm disiplin kararları yargı denetimi dışında bırakılamaz.</li>
+            <li><strong>Tazminat Davasında Muhatap İdaredir:</strong> Memurun kusurundan doğan tazminat davaları, doğrudan memura değil, idare aleyhine açılır. İdare, ödediği tazminatı memura rücu eder.</li>
+            <li><strong>Ceza Davası İçin İzin Gerekir:</strong> Memurun göreviyle ilgili bir suçtan dolayı ceza davası açılabilmesi, idari merciin iznine bağlıdır.</li>
+          </ol>
+        </div>
         <div class="strategy-box mt-4">
           <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: İki Dava Türünü Ayırt Etme</h6>
-          <p style="text-align: justify;" class="text-sm mb-3">Sınavda, memura karşı açılacak dava türleri ve usulleri sıkça karıştırılır. Bu ayrımı netleştirin:</p>
             <div class="overflow-x-auto">
                 <table class="w-full text-sm border-collapse">
                     <thead><tr class="bg-slate-100"><th class="border border-slate-300 p-2">Dava Türü</th><th class="border border-slate-300 p-2">Sebep</th><th class="border border-slate-300 p-2">Kime Karşı Açılır / Usul Nedir?</th></tr></thead>
                     <tbody class="bg-white">
-                        <tr><td class="border border-slate-300 p-2 font-medium">Tazminat Davası</td><td class="border border-slate-300 p-2">Memurun kusuruyla vatandaşa zarar vermesi</td><td class="border border-slate-300 p-2">Doğrudan <strong>İDARE'ye</strong> açılır.</td></tr>
-                        <tr class="bg-slate-50"><td class="border border-slate-300 p-2 font-medium">Ceza Davası</td><td class="border border-slate-300 p-2">Memurun göreviyle ilgili suç işlemesi</td><td class="border border-slate-300 p-2">Önce <strong>İDARİ MERCİDEN İZİN</strong> alınır.</td></tr>
+                        <tr><td class="border border-slate-300 p-2 font-medium">Tazminat Davası</td><td class="border border-slate-300 p-2">Vatandaş, memurun kusurundan zarar görürse</td><td class="border border-slate-300 p-2">Doğrudan <strong>İDARE'ye</strong> açar.</td></tr>
+                        <tr class="bg-slate-50"><td class="border border-slate-300 p-2 font-medium">Ceza Davası</td><td class="border border-slate-300 p-2">Savcılık, memurun suç işlediğini düşünürse</td><td class="border border-slate-300 p-2">Önce <strong>İDARİ MERCİDEN İZİN</strong> alır.</td></tr>
                     </tbody>
                 </table>
             </div>
@@ -4964,6 +4972,13 @@
             <ul class="list-disc pl-5 text-sm space-y-1">
                 <li><strong>REKTÖRLER ➡️ CUMHURBAŞKANINCA</strong> seçilir ve atanır.</li>
                 <li><strong>DEKANLAR ➡️ YÜKSEKÖĞRETİM KURULUNCA (YÖK)</strong> seçilir ve atanır.</li>
+            </ul>
+        </div>
+        <div class="highlight-box mt-4">
+            <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">💡</span>Diğer Kritik Bilgiler</h6>
+             <ul class="list-disc pl-5 text-sm space-y-1">
+                <li><strong>Akademik Güvence:</strong> Öğretim elemanları, YÖK veya kendi üniversiteleri dışında bir makamca görevden uzaklaştırılamaz.</li>
+                <li><strong>Vakıf Üniversiteleri:</strong> Mali ve idari konular dışında, akademik ve güvenlik gibi konularda devlet üniversiteleriyle aynı kurallara tabidir.</li>
             </ul>
         </div>
     </div>
