--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -4702,7 +4702,7 @@
         </div>
     </div>
 </details>
-             <!-- Madde 120, 121, 122 -->
+            <!-- Madde 120, 121, 122 -->
 <details id="madde-120-122" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
     <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800 bg-slate-100 text-slate-500">
         <span class="mr-3 text-xl">📘</span> Madde 120, 121, 122 – Eski OHAL ve Sıkıyönetim Maddeleri (Mülga)
@@ -4733,6 +4733,15 @@
         <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
             Kamu tüzelkişiliği, <strong>kanunla veya Cumhurbaşkanlığı kararnamesiyle kurulur.</strong>
         </blockquote>
+        <div class="highlight-box mt-4">
+            <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Uzman Eğitmen Analizi:</h6>
+            <p style="text-align: justify;" class="text-sm">Bu madde, Türkiye'deki idari yapının "iskeletini" çizer ve üç temel ilke ortaya koyar:</p>
+            <ul class="list-disc pl-5 space-y-1 text-sm">
+                <li><strong>İdarenin Bütünlüğü:</strong> Merkez ve yerinden yönetim birimlerinden oluşsa da, idare bir bütündür ve bu bütünlük "idari vesayet" yetkisiyle sağlanır.</li>
+                <li><strong>Merkezden ve Yerinden Yönetim:</strong> İdarenin görevleri, hem başkentteki merkezi birimler hem de belirli özerkliğe sahip yerel birimler tarafından yürütülür.</li>
+                <li><strong>Kamu Tüzelkişiliği Kurulması:</strong> Bir kamu tüzelkişiliği iki şekilde kurulabilir: Kanunla VEYA Cumhurbaşkanlığı Kararnamesiyle.</li>
+            </ul>
+        </div>
         <div class="strategy-box mt-4">
           <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi:</h6>
           <p style="text-align: justify;" class="text-sm">2017 öncesinde kamu tüzelkişiliği sadece kanunla kurulabilirdi. Artık <strong>Cumhurbaşkanlığı Kararnamesiyle de kurulabilmesi,</strong> sınavlar için çok önemli bir yeniliktir ve doğrudan sorulma potansiyeli yüksektir.</p>
