--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -4737,14 +4737,14 @@
             <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Uzman Eğitmen Analizi:</h6>
             <p style="text-align: justify;" class="text-sm">Bu madde, Türkiye'deki idari yapının "iskeletini" çizer ve üç temel ilke ortaya koyar:</p>
             <ul class="list-disc pl-5 space-y-1 text-sm">
-                <li><strong>İdarenin Bütünlüğü:</strong> Merkez ve yerinden yönetim birimlerinden oluşsa da, idare bir bütündür ve bu bütünlük "idari vesayet" yetkisiyle sağlanır.</li>
+                <li><strong>İdarenin Bütünlüğü:</strong> İdare, merkez (Bakanlıklar) ve yerinden yönetim (Belediyeler, Üniversiteler, TRT) birimlerinden oluşsa da, bir bütün halinde çalışır. Bu bütünlük, merkezdeki idarenin yerel idareler üzerinde sahip olduğu "idari vesayet" yetkisiyle sağlanır.</li>
                 <li><strong>Merkezden ve Yerinden Yönetim:</strong> İdarenin görevleri, hem başkentteki merkezi birimler hem de belirli özerkliğe sahip yerel birimler tarafından yürütülür.</li>
-                <li><strong>Kamu Tüzelkişiliği Kurulması:</strong> Bir kamu tüzelkişiliği iki şekilde kurulabilir: Kanunla VEYA Cumhurbaşkanlığı Kararnamesiyle.</li>
+                <li><strong>Kamu Tüzelkişiliği Kurulması:</strong> Bu, sınavlar için en güncel ve en önemli bilgidir. Bir kamu tüzelkişiliği (Belediye, Üniversite, SGK, TRT gibi) iki şekilde kurulabilir: Kanunla VEYA Cumhurbaşkanlığı Kararnamesiyle.</li>
             </ul>
         </div>
         <div class="strategy-box mt-4">
-          <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi:</h6>
-          <p style="text-align: justify;" class="text-sm">2017 öncesinde kamu tüzelkişiliği sadece kanunla kurulabilirdi. Artık <strong>Cumhurbaşkanlığı Kararnamesiyle de kurulabilmesi,</strong> sınavlar için çok önemli bir yeniliktir ve doğrudan sorulma potansiyeli yüksektir.</p>
+            <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi:</h6>
+            <p style="text-align: justify;" class="text-sm">2017 öncesinde kamu tüzelkişiliği sadece kanunla kurulabilirdi. Artık <strong>Cumhurbaşkanlığı Kararnamesiyle de kurulabilmesi,</strong> sınavlar için çok önemli bir yeniliktir ve doğrudan sorulma potansiyeli yüksektir.</p>
         </div>
     </div>
 </details>
@@ -4761,13 +4761,13 @@
         <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
             Hangi yönetmeliklerin Resmî Gazetede yayımlanacağı kanunda belirtilir.
         </blockquote>
-         <div class="highlight-box mt-4">
+        <div class="highlight-box mt-4">
             <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Uzman Eğitmen Analizi:</h6>
-            <p style="text-align: justify;" class="text-sm">Yönetmelikler, normlar hiyerarşisinin alt basamaklarında yer alan, idarenin kendi iç işleyişini ve kanunların uygulanışını detaylandıran düzenleyici işlemlerdir. Sınav için kimlerin yönetmelik çıkarabileceğini bilmek önemlidir:</p>
+            <p style="text-align: justify;" class="text-sm mb-2">Yönetmelikler, normlar hiyerarşisinin alt basamaklarında yer alan, idarenin kendi iç işleyişini ve kanunların uygulanışını detaylandıran düzenleyici işlemlerdir.</p>
             <ul class="list-disc pl-5 space-y-1 text-sm">
-                <li>Cumhurbaşkanı</li>
-                <li>Bakanlıklar</li>
-                <li>Kamu tüzelkişileri (Belediyeler, Üniversiteler vb.)</li>
+                <li><strong>Kimler Çıkarabilir?:</strong> Cumhurbaşkanı, Bakanlıklar, Kamu tüzelkişileri (Belediyeler, Üniversiteler vb.).</li>
+                <li><strong>Şartı Nedir?:</strong> Kendi görev alanlarıyla ilgili kanunlara ve Cumhurbaşkanlığı kararnamelerine aykırı olamazlar.</li>
+                <li><strong>Amacı Nedir?:</strong> Üst normların (kanun ve CBK'ların) uygulanmasını sağlamak ve detaylandırmak.</li>
             </ul>
         </div>
     </div>
@@ -4800,20 +4800,38 @@
         <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
             <strong>İdare, kendi eylem ve işlemlerinden doğan zararı ödemekle yükümlüdür.</strong>
         </blockquote>
-         <div class="strategy-box mt-4">
-          <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: Altın Kuralın İstisnaları</h6>
-          <p style="text-align: justify;" class="text-sm">"Altın Kural" idarenin her işleminin yargıya açık olmasıdır. Ancak Anayasa, bu genel kurala bazı istisnalar getirmiştir. Sınavlarda en çok bu istisnalar sorulur:</p>
-          <ul class="list-disc pl-5 text-sm space-y-1">
-            <li><strong>Yüksek Askerî Şûra (YAŞ) Kararları:</strong> Sadece <strong>terfi işlemleri</strong> ve <strong>kadrosuzluk nedeniyle emekliye ayırma</strong> kararları yargı denetimi DIŞINDADIR. Bunun dışındaki tüm ilişik kesme kararlarına yargı yolu AÇIKTIR.</li>
-            <li><strong>Diğer İstisnalar (İlgili Maddelerde Gördük/Göreceğiz):</strong> HSK'nın meslekten çıkarma dışındaki kararları (Md. 159), YSK kararları (Md. 79), Spor Tahkim Kurulu kararları (Md. 59), Milletlerarası andlaşmalar (Md. 90).</li>
-          </ul>
+        <div class="highlight-box mt-4">
+            <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Uzman Eğitmen Analizi:</h6>
+            <p style="text-align: justify;" class="text-sm">Bu madde, "hukuk devleti" ilkesinin en temel güvencesidir. İdarenin keyfi davranmasını engelleyen "yargı denetimi" kalkanını düzenler. Altın kural şudur: İdarenin her türlü eylem ve işlemlerine karşı yargı yolu açıktır. Bu ana kural, hiçbir idari işlemin kural olarak yargı denetiminin dışında bırakılamayacağını ifade eder.</p>
+        </div>
+        <div class="strategy-box mt-4">
+            <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: Altın Kuralın İstisnaları</h6>
+            <p style="text-align: justify;" class="text-sm mb-3">Anayasa, bu genel kurala bazı istisnalar getirmiştir. Sınavlarda en çok bu istisnalar sorulur:</p>
+            <ul class="list-disc pl-5 text-sm space-y-1">
+                <li><strong>Yüksek Askerî Şûra (YAŞ) Kararları:</strong> YAŞ'ın aldığı kararlardan sadece <strong>terfi işlemleri</strong> ve <strong>kadrosuzluk nedeniyle emekliye ayırma</strong> işlemleri yargı denetimi DIŞINDADIR. Bunun dışındaki her türlü ilişik kesme (ihraç vb.) kararlarına karşı yargı yolu AÇIKTIR.</li>
+                <li><strong>Milletlerarası Tahkim:</strong> Yabancılık unsuru taşıyan imtiyaz sözleşmelerinden doğan uyuşmazlıkların milletlerarası tahkimde çözülmesi öngörülebilir.</li>
+            </ul>
         </div>
         <div class="highlight-box mt-4">
             <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">💡</span>Anlamlandırma Kutusu: "Yerindelik Denetimi Yasağı"</h6>
-            <p style="text-align: justify;" class="text-sm">Bu, idari yargının en temel ilkesidir. Mahkeme, idarenin bir işlemini denetlerken sadece "Bu işlem hukuka uygun mu, değil mi?" diye sorabilir. Asla "Bu işlem hukuka uygun ama daha iyi, daha yerinde, daha mantıklı yapılabilir miydi?" diye soramaz. Yani yargı, idarenin yerine geçerek onun takdir yetkisini kullanacağı şekilde karar veremez.</p>
+            <p style="text-align: justify;" class="text-sm">Bu, idari yargının en temel ilkesidir. Mahkeme, idarenin bir işlemini denetlerken sadece "Bu işlem hukuka (kanuna, anayasaya) uygun mu, değil mi?" diye sorabilir. Mahkeme asla "Bu işlem hukuka uygun ama daha iyi, daha yerinde, daha mantıklı yapılabilir miydi?" diye soramaz. Yani yargı, idarenin yerine geçerek onun takdir yetkisini kullanacağı şekilde karar veremez. Sadece "hukukilik" denetimi yapar, "yerindelik" denetimi yapamaz.</p>
+        </div>
+        <div class="warning-box mt-4">
+            <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">⚠️</span>Diğer Önemli Kurallar:</h6>
+            <ul class="list-disc pl-5 text-sm space-y-2">
+                <li><strong>Yürütmenin Durdurulması:</strong> Bir idari işlemin dava sonuçlanana kadar durdurulabilmesi için iki şartın <strong>birlikte</strong> gerçekleşmesi gerekir:
+                    <ol class="list-decimal pl-5 mt-1">
+                        <li>İşlem uygulanırsa telafisi güç veya imkansız zararlar doğacak olması.</li>
+                        <li>İşlemin açıkça hukuka aykırı olması.</li>
+                    </ol>
+                </li>
+                <li><strong>İdarenin Sorumluluğu:</strong> İdare, kendi eylem ve işlemlerinden doğan zararı ödemekle yükümlüdür (hizmet kusuru).</li>
+            </ul>
         </div>
     </div>
 </details>
+
+
 
   
 </section>
